work in progress on program editor

--- a/gbox/index.html
+++ b/gbox/index.html
@@ -162,7 +162,8 @@
         in the address bar, find "native client" about 10 items down, and
         <em>enable</em> it.  Then restart your browser.  Left - click - and drag
         to move the screen.  Right click to zoom out,  Shift - Right click to
-        zoom in.  click on the animated object, and hit any letter to 'shuffle'
+        zoom in.  click on the animated object, and hit any letter to 'shuffle'.
+        Enjoy.
       </div>
     </td>
   </tr>
