mouse/editor interaction

--- a/gbox/index.html
+++ b/gbox/index.html
@@ -33,9 +33,9 @@
       DjOneModule.postMessage('hello');
       DjOneModule.postMessage('c/100');
       paintInterval = setInterval(function() {
-          if (stopped == 0) {
+          //if (stopped == 0) {
             DjOneModule.postMessage("paint");
-          }
+          //}
         }, 25);
       clockInterval = setInterval(function() {
           if (stopped == 0) {
